[tool.poetry]
name = "pytest-anki"
version = "1.0.0-dev.1"
description = "A pytest plugin for testing Anki add-ons"
authors = ["Aristotelis P. (Glutanimate)", "Michal Krassowski"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/glutanimate/pytest-anki"
homepage = "https://github.com/glutanimate/pytest-anki"
readme = "README.md"
keywords = ["anki", "development", "testing", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
]
include = ["pytest_anki/py.typed"]

[tool.poetry.plugins.pytest11]
anki = "pytest_anki"

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=3.5.0"
pytest-forked = "^1.3.0"
pytest-xdist = "^2.3.0"
pytest-xvfb = "^2.0.0"
PyVirtualDisplay = "^2.2"
anki = ">=2.1.28"
aqt = ">=2.1.28"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.10.2"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest-qt = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
qt_api = "pyqt5"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length=88
ensure_newline_before_comments=true
