[tool.poetry]
name = "pytest-anki"
version = "1.0.0-beta.3.post1"
description = "A pytest plugin for testing Anki add-ons"
authors = ["Aristotelis P. (Glutanimate)", "Michal Krassowski"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/glutanimate/pytest-anki"
homepage = "https://github.com/glutanimate/pytest-anki"
readme = "README.md"
keywords = ["anki", "development", "testing", "test", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: User Interfaces",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
]
include = ["pytest_anki/py.typed"]

[tool.poetry.plugins.pytest11]
anki = "pytest_anki.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=3.5.0"
pytest-forked = "^1.3.0"
pytest-xdist = "^2.3.0"
pytest-xvfb = "^2.0.0"
anki = ">=2.1.54"
aqt = ">=2.1.54"
pytest-qt = "^4.0.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.10.2"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^3.9.2"
requests = "^2.26.0"
types-requests = "^2.25.6"
PyQt5-stubs = "^5.15.6.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
qt_api = "pyqt5"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
exclude = "tests/samples/"

[tool.black]
exclude = "tests/samples/"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length=88
ensure_newline_before_comments=true
skip_glob = "tests/samples/**"
